--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -20,6 +20,8 @@
 .section-how {
     padding: 9.6rem 3.2rem;
 
+    border-bottom: var(--border);
+
     &__header {
         margin-bottom: 3.2rem;
     }
