finished testimonials section

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,10 +9,12 @@
 @import "components/featured-in";
 @import "components/stat";
 @import "components/feature";
+@import "components/testimonial";
 
 @import "layouts/hero";
 @import "layouts/stats";
 @import "layouts/features";
 @import "layouts/how";
+@import "layouts/testimonials";
 
 @import "pages/home";
