--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -2,6 +2,7 @@
     font-size: 6rem;
     font-weight: 400;
     line-height: 1.15;
+    text-shadow: .2rem .5rem .4rem rgba(0, 0, 0, 0.2);
 }
 
 .heading-secondary {
