--- a/styles/components/_feature.scss
+++ b/styles/components/_feature.scss
@@ -35,6 +35,6 @@
 
     &:hover {
         transform: translateY(-2rem);
-        box-shadow: 0 1rem 6rem rgba(0, 0, 0, 0.15);
+        box-shadow: var(--box-shadow);
     }
 }
