--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -19,6 +19,8 @@
     --main-color-dark-8: #031e23;
     --main-color-darkest: #020f11;
 
+    --accent-color: #F4F9E9;
+
     --gray-0: #f8f9fa;
     --gray-1: #f1f3f5;
     --gray-2: #e9ecef;
