--- a/styles/components/_testimonial.scss
+++ b/styles/components/_testimonial.scss
@@ -1,5 +1,5 @@
 .testimonial {
-    background-color: #fff;
+    background-color: var(--accent-color);
     padding: 2.4rem;
     border-radius: .5rem;
     border: var(--border);
