--- a/styles/components/_feature.scss
+++ b/styles/components/_feature.scss
@@ -6,14 +6,14 @@
     transition: all .4s;
 
     &__icon {
-        background-color: #fff;
+        background-color: var(--accent-color);
         width: 3.2rem;
         height: 3.2rem;
         border-radius: 50%;
         box-sizing: content-box;
         padding: .3rem;
         margin-bottom: 2rem;
-
+    
         display: flex;
         align-items: center;
         justify-content: center;
