--- a/styles/components/_btns.scss
+++ b/styles/components/_btns.scss
@@ -3,6 +3,7 @@
     padding: .8rem 1.6rem;
     color: var(--gray-8);
     font-size: 1.8rem;
+    font-weight: 600;
     
     &--primary:link, &--primary:visited {
         background-color: var(--main-color);
