--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -31,8 +31,29 @@
     padding: 9.6rem 3.2rem;
     background-color: var(--main-color-lightest);
     border-bottom: var(--border);
+    background-position: bottom;
+
 
     &__header {
         margin-bottom: 3.2rem;
+    }
+}
+
+.section-cta {
+    padding: 9.6rem 3.2rem;
+    background-image: linear-gradient(to bottom left, rgba(231, 245, 247, 0.5), rgba(64, 172, 189, 0.5)), url(../../public/imgs/gold.jpg);
+    border-bottom: var(--border);
+    background-size: cover;
+    //color: white;
+    text-shadow: .3rem .5rem 1rem rgba(0, 0, 0, 0.15);
+
+
+    &__header {
+        margin-bottom: 3.2rem;
+    }
+
+    &__paragraph {
+        margin-bottom: 2.4rem;
+        font-size: 1.8rem;
     }
 }
