--- a/styles/layouts/_hero.scss
+++ b/styles/layouts/_hero.scss
@@ -13,7 +13,7 @@
         gap: 2.4rem;
         align-items: flex-start;
         color: #fff;
-        width: 65%
+        width: 65%;
     }
 
     &__paragraph {
